--- a/ProyectoPOO1/src/main/java/aplicacion/Requisitos.form
+++ b/ProyectoPOO1/src/main/java/aplicacion/Requisitos.form
@@ -207,14 +207,13 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTable" name="jTable1">
+        <Component class="javax.swing.JTable" name="tblRequisitos">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="4" rowCount="4">
-                <Column editable="true" title="Title 1" type="java.lang.Object"/>
-                <Column editable="true" title="Title 2" type="java.lang.Object"/>
-                <Column editable="true" title="Title 3" type="java.lang.Object"/>
-                <Column editable="true" title="Title 4" type="java.lang.Object"/>
+              <Table columnCount="3" rowCount="4">
+                <Column editable="true" title="C&#xf3;digo del curso " type="java.lang.String"/>
+                <Column editable="true" title="C&#xf3;digo del requisito" type="java.lang.String"/>
+                <Column editable="true" title="C&#xf3;digo del correquisito" type="java.lang.String"/>
               </Table>
             </Property>
           </Properties>
